# thermal_tracker

./: .gitignore  CLAUDE.md  LICENSE  LLM_ARCHITECTURE_BRIEF.md  LLM_PROJECT_CONTEXT.md  README.md  pyproject.toml  requirements.txt  run_desktop_client.py  run_dev.py  run_gateway.py  run_local_bench.py  run_network_sender.py  run_runtime.py  run_server.py  run_shared_memory_cleanup.py  run_shared_memory_worker.py  run_synthetic_sender.py  run_web_client.py  stop_server.py
configs/: dev.toml  runtime.toml  server.toml  shared_memory_smoke.toml  web_client.toml
docs/: SCENARIOS.md  architecture.md  configuration.md  context_irst_bug_analysis.md  irst_tracking.md  presets.md  processing_stages.md  project_structure.md  quick_start.md  run_modes.md  scenarios.md  shared_memory_gateway.md  terminology.md  troubleshooting.md  стадии_обработки.md
docs/processing_stages/: candidate_filtering.md  connections_frames.md  frame_preprocessing.md  frame_stabilization.md  moving_area_detection.md  scenarios.md  target_candidate_extraction.md  target_recovery.md  target_selection.md  target_tracking.md
docs_llm/: llm_global_rules.md  llm_index.md  llm_index.md.md  llm_project_architecture.md  llm_project_context.md  llm_project_handoff.md  llm_project_tasks.md  llm_worklog.md
presets/: irst_small_target.toml  opencv_auto_motion.toml  opencv_clutter.toml  opencv_general.toml  opencv_small_target.toml  yolo_auto.toml  yolo_general.toml
src/: __init__.py
src/thermal_tracker/: __init__.py  __main__.py  cli.py  errors.py  runtime_app.py  session.py
tests/: test_shared_memory_gateway.py
tests/fixtures/: server_smoke.toml
(+431 files in other folders)
