[project]
name = "thermal-tracker"
version = "0.1.0"
description = "Thermal video target tracking and motion detection toolkit."
authors = [
    { name = "omigutin", email = "migutin83@yandex.ru" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12,<3.13"
keywords = [
    "thermal-imaging",
    "tracking",
    "opencv",
    "yolo",
]
dynamic = ["dependencies"]


[tool.poetry]
packages = [
    { include = "thermal_tracker", from = "src" },
]
include = [
    { path = "src/thermal_tracker/client/web/*.html", format = ["sdist", "wheel"] },
    { path = "src/thermal_tracker/client/web/*.css", format = ["sdist", "wheel"] },
    { path = "src/thermal_tracker/client/web/*.js", format = ["sdist", "wheel"] },
    { path = "src/thermal_tracker/client/web/*.toml", format = ["sdist", "wheel"] },
    { path = "src/thermal_tracker/client/gui/*.toml", format = ["sdist", "wheel"] },
    { path = "src/thermal_tracker/server/*.toml", format = ["sdist", "wheel"] },
]

[tool.poetry.dependencies]
# --- base / prod ---
numpy = "==2.4.2"
opencv-python = "==4.13.0.92"
ultralytics = "==8.4.43"
fastapi = "^0.115"
uvicorn = "^0.32"


# =========================
# Local development / tools
# =========================
[tool.poetry.group.dev.dependencies]
pytest = ">=8,<10"


[tool.pytest.ini_options]
norecursedirs = [
    ".git",
    ".idea",
    ".venv",
    ".pytest_cache",
    "__pycache__",
    "out",
    "video",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
